# equidexflow

./: .gitignore  LICENSE  NOTICE  README.md  REPRODUCE.md  pyproject.toml
assets/hands/allegro/: __init__.py
assets/hands/leap/: leap_hand_rh.urdf
assets/objects/graspit/: box.stl  cube.stl  cylinder.stl  sphere.stl
checkpoints/: MANIFEST.yaml  README.md  download_checkpoints.py
checkpoints/allegro_contact_only/: README.md  metrics.json  sha256.txt
checkpoints/allegro_full/: README.md  config.yml  metrics.json  sha256.txt
checkpoints/allegro_full_flow_alt/: config.yml  sha256.txt
checkpoints/allegro_geom_only/: README.md  config.yml  metrics.json  sha256.txt
checkpoints/allegro_pose_only/: README.md  metrics.json  sha256.txt
data/: README.md
scripts/: compute_diversity.py  compute_equivariance_binned.py  compute_statistical_tests.py  download_assets.py  eval_contacts.py  eval_forces.py  eval_rollout.py  generate_all_81.py  generate_figure_grasps.py  reproduce.sh  run_full_eval.py  run_inference_ablations.py  sweep_ode_guidance.py  train.py
scripts/plot/: plot_flow_training.py  plot_score_distributions.py  plot_training_curves.py  plot_training_curves_3panel.py
src/equidexflow/: __init__.py  api.py  pipeline.py
src/equidexflow/cli/: __init__.py  demo.py  info.py
src/equidexflow/configs/: equidexflow_dex_contact_only.yml  equidexflow_dex_contact_only_conditioned.yml  equidexflow_dex_contact_only_retrain.yml  equidexflow_dex_contact_only_xhand.yml  equidexflow_dex_full.yml  equidexflow_dex_full_centered.yml  equidexflow_dex_full_conditioned.yml  equidexflow_dex_full_conditioned_smoke.yml  equidexflow_dex_full_fc.yml  equidexflow_dex_full_fc_reach.yml  equidexflow_dex_full_fc_reach_xt.yml  equidexflow_dex_full_flow.yml  equidexflow_dex_full_flow_film.yml  equidexflow_dex_full_retrain.yml  equidexflow_dex_geom_only.yml  equidexflow_dex_geom_only_81.yml  equidexflow_dex_geom_only_81_conditioned.yml  equidexflow_dex_geom_only_81_retrain.yml  equidexflow_dex_pose_only.yml  equidexflow_dex_pose_only_conditioned.yml  equidexflow_dex_pose_only_retrain.yml  equidexflow_dex_pose_only_xhand.yml  equidexflow_dex_smoke.yml  equigraspflow_full.yml  equigraspflow_partial.yml  paths.example.yaml
src/equidexflow/kinematics/: __init__.py  allegro_fk.py  allegro_rh_kinematics.json  collision.py  collision_points.py  friction_cone.py  grasp_map.py  leap.py  leap_collision_spheres.json  realhand_l6.py  seating.py
src/equidexflow/loaders/: __init__.py  acronym.py  dexgrasp_db.py  force_label.py  schema.py
src/equidexflow/losses/: __init__.py  contact_loss.py  force_loss.py  physics_loss.py
src/equidexflow/metrics/: __init__.py  emd.py
src/equidexflow/models/: __init__.py  contact_decoder.py  equi_dex_flow.py  equi_grasp_flow.py  force_decoder.py  hand_q_decoder.py  hand_q_flow_decoder.py  vn_dgcnn.py  vn_vector_fields.py
src/equidexflow/physics/: __init__.py  scorer.py
src/equidexflow/render/: __init__.py  allegro_assets.py  hand_render.py
src/equidexflow/trainers/: __init__.py  dex_trainer.py  grasp_trainer.py
src/equidexflow/utils/: ode_solvers.py
tests/: test_inference_pipeline.py  test_smoke.py
tests/legacy/: test_full.py  test_partial.py
